--- a/catalog.pug
+++ b/catalog.pug
@@ -3,6 +3,7 @@ html(lang="ru")
   head
     meta(charset="utf-8")
     title HTML Academy: Техномарт Каталог
+    link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/style.css")
   body.page
     header.page-header
@@ -229,7 +230,7 @@ html(lang="ru")
           p Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
     footer.page-footer
       .container
-        .top-row
+        .footer-top-row
           .logo-bottom
             img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
@@ -243,7 +244,7 @@ html(lang="ru")
               a(href="") Доставка
             li
               a(href="") Контакты
-        .middle-row
+        .footer-middle-row
           p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
             a(href="tel:+78125550555") +7 (812) 555-05-55
           ul.footer-category
@@ -255,7 +256,7 @@ html(lang="ru")
               a(href="") Инструмент
             li
               a(href="") Спецпредложения
-        .bottom-row
+        .footer-bottom-row
           p © 2010-2017 Компания "Техномарт" Все права защищены
           section.socials
             .social-item.vk
@@ -266,4 +267,5 @@ html(lang="ru")
               a(href="instagram.com" target="_blank" aria-label="instagram")
           p Обратная связь
           a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
-          a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") Разработано htmlacademy.ru
+          p Разработано
+          a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
