--- a/css/style.styl
+++ b/css/style.styl
@@ -6,7 +6,7 @@ $color-05 = rgba(0, 0, 0, 0.24)
 $color-06 = #32425c
 $color-07 = #000
 $color-08 = #ca2c37
-$color-09 = #32425c
+$color-09 = #405069
 $color-10 = #ffbf47
 $color-11 = #3bbce3
 $color-12 = #dc91d8
@@ -14,341 +14,416 @@ $color-13 = #8ed78f
 $color-14 = #ffc047
 $color-15 = #f9f5f0
 $color-16 = #a9a9a9
+$color-17 = #f5f8fa
+$color-18 = #f1f5f7
+$color-19 = #ffd180
+$color-20 = #212a3a
+$color-21 = #ba2732
+$color-22 = #161d29
+$color-23 = #5fbb2d
+$color-24 = #518534
+$color-25 = #63a63e
+$color-26 = #1d2739
+$color-27 = rgba(41, 52, 73, 0.5)
+$color-28 = #367315
+
+html
+  box-sizing border-box
+
+*, *::before, * ::after
+  box-sizing inherit
 
 @font-face
   font-family "Cuprum"
-  src url('../fonts/Cuprum/Cuprum-Regular.ttf') format(TrueType)
+  src url('../fonts/web/cuprum.woff2') format('woff2'),
+      url('../fonts/web/cuprum.woff') format('woff')
   font-style normal
   font-weight 400
 
 @font-face
   font-family "Cuprum-Italic"
-  src url('../fonts/Cuprum/Cuprum-Italic.ttf') format(TrueType)
-  font-style normal
+  src url('../fonts/web/cuprumitalic.woff2') format(woff2),
+      url('../fonts/web/cuprumitalic.woff') format(woff)
+  font-style italic
   font-weight 400
 
 @font-face
   font-family "Cuprum-Bold"
-  src url('../fonts/Cuprum/Cuprum-Bold.ttf') format(TrueType)
+  src url('../fonts/web/cuprumbold.woff2') format('woff2'),
+      url('../fonts/web/cuprumbold.woff') format('woff')
   font-style normal
   font-weight 700
 
 @font-face
-  font-family "PT-sans-Bold"
-  src url('../fonts/PTSans/PTS75F.ttf') format(TrueType)
+  font-family "pt-sans-bold"
+  src url('../fonts/web/ptsansbold.woff2') format('woff2'),
+      url('../fonts/web/ptsansbold.woff') format('woff')
   font-style normal
   font-weight 700
 
+@font-face
+  font-family "pt-sans"
+  src url('../fonts/web/ptsans.woff2') format('woff2'),
+      url('../fonts/web/ptsans.woff') format('woff')
+  font-style normal
+  font-weight 400
+
 .page
   margin 0 auto
-  width 1200px
-  height 4252px
-  background $color-01
-
-  .page-header
-    width 1200px
-    height 320px
-    background-color $color-03
-
-    .container
-      width 940px
-      height 260px
-
-      .top-row
-        width 1200px
-        height 42px
-        background-color $color-02
-        font 17px "Cuprum"
-        line-height 18px
-        text-transform capitalize
-
-        .logo-top
-          width 220px
-          height 47px
-          box-shadow inset 0 -5px 0 $color-05
-          background-color $color-04
-
-          &:hover
-            background-color $color-08
-
-        .search
-          width 270px
-
-        .bookmarks
-          width 150px
-
-        .cart
-          width 150px
-
-        .order
-          width 150px
-
-      .middle-row
-        height 153px
-
-        .slogan
-          width 196px
-          height 60px
-          color $color-04
-          font 25px "Cuprum-Italic"
-          line-height 23px
-
-          .visually-hidden
-            position absolute !important
-            height 1px
-            width 1px
-            overflow hidden
-            clip rect(1px 1px 1px 1px)
-            clip rect(1px, 1px, 1px, 1px)
-            white-space nowrap
-
-        .address
-          height 70px
-
-          .phone-number
-            width 270px
-            height 45px
-            border 3px solid $color-01
-
-            .phone
-              width 19px
-              height 19px
-              background-image url('../img/icon-phone.svg')
-
-            .number
-              color $color-04
-              font 21px "Cuprum"
-              line-height 21px
-
-          p
-            color $color-06
-            font 14px "Cuprum"
-            line-height 24px
-
-        .authorization
-          width 281
-          height 45
-          font 21px "Cuprum"
-          line-height 21px
-
-          a
-            color $color-07
-
-          a:hover
-
-
-          .registration
-            background-color $color-01
-            color $color-07
-
-      .navigation
-        width 940px
-        height 60px
-        box-shadow inset 0 -5px 0 $color-02
-        background-color $color-09
-        font 17px"Cuprum"
-        line-height 17px
-
-        .navigation-item
-          width 127px
-
-          &:hover
-            background-color $color-02
-        a
-          color $color-01
-          text-decoration none
-
-  .page-content
-
-    .categories
-      width 940px
-      height 410px
-      font 24px "Cuprum-Bold"
-      line-height 30px
-
-      .left-column
-        width 620px
-
-        .categories-item
-          width 300px
-          height 123px
-
-          .click
-            width 135px
-            height 38px
-            background-color $color-07
-            opacity 0.1
-            text-align center
-
-            a
-              font 14px "Cuprum"
-              line-height 18px
-              text-transform uppercase
-              color $color-01
-              text-decoration none
-
-        .material
-          background-color $color-10
-
-          .item-icon-material
-            background-image url('../img/icon-1.svg')
-            width 44px
-            height 65px
-
-        .tool
-          background-color $color-11
-
-          .item-icon-tool
-            background-image url('../img/icon-2.svg')
-            width 75px
-            height 61px
-
-        .slider
-          width 620px
-          height 266px
-
-          .slider-item
-
-            h3
-              color $color-01
-              font 36px "Cuprum-Bold"
-              line-height 36px
-              text-transform uppercase
-
-            p
-              color $color-01
-              font 18px "Cuprum"
-              line-height 24px
-
-            .btn
-              width 195px
-              height 38px
-              background-color $color-04
-
-              a
-                color $color-01
-                font 14px "Cuprum"
-                line-height 18px
-                text-transform uppercase
-                text-decoration none
-
-          .perf
-            width 620px
-            height 266px
-            background-image url('../img/perf.jpg')
-
-          .drill
-            width 620px
-            height 266px
-            background-image url('../img/drill.jpg')
-
-          .controls
-
-            .dot
-              width 10px
-              height 10px
-              border-radius 50%
-
-          .prev
-            background-image url('../img/icon-left.svg')
-            width 22px
-            height 40px
-          .next
-            background-image url('../img/icon-right.svg')
-            width 22px
-            height 40px
-
-      .right-column
-        width 300px
-
-        .categories-item
-          height 123px
-
-          .click
-            width 135px
-            height 38px
-            background-color $color-07
-            opacity 0.1
-            text-align center
-
-            a
-              font 14px "Cuprum"
-              line-height 18px
-              text-transform uppercase
-              color $color-01
-              text-decoration none
-
-        .technic
-          background-color $color-12
-
-          .item-icon-technic
-            background-image url('../img/icon-3.svg')
-            width 78px
-            height 62px
-
-        .sale
-          background-color $color-13
-
-          .item-icon-sale
-            background-image url('../img/icon-4.svg')
-            width 59px
-            height 72px
-
-        .delivery
-          background-color $color-14
-
-          .item-icon-delivery
-            background-image url('../img/icon-5.svg')
-            width 78px
-            height 63px
-
-    .popular
-
-      .popular-header
-        width 940px
-        height 89px
-        background-color $color-15
-
-        h3
-          color $color-06
-          font 30px "Cuprum"
-          line-height 30px
-          text-transform uppercase
-
-        .btn
-          width 253px
-          height 38px
-          background-color $color-04
-
-          a
-            font 14px "Cuprum"
-            line-height 18px
-            color $color-01
-            text-transform uppercase
-            text-decoration none
-
-      .goods
-
-        .goods-item
-
-          .title
-            width 155px
-            height 33px
-            color $color-07
-            font 18px "PT-sans-Bold"
-            line-height 20px
-          .old-price
-            width 67px
-            height 12px
-            color $color-16
-            font 17px "PT-sans-Bold"
-            line-height 18px
-            text-transform uppercase
-          .price
-            width 65px
-            height 12px
-            color $color-01
-            font 17px "PT-sans-Bold"
-            line-height 18px
-            text-transform uppercase
-            background-image url('../img/btn_copy_14.svg')
+  $color-01
+  font 14px "Cuprum"
+  line-height 18px
+
+.visually-hidden
+  position absolute !important
+  height 1px
+  width 1px
+  overflow hidden
+  clip rect(1px 1px 1px 1px)
+  clip rect(1px, 1px, 1px, 1px)
+  white-space nowrap
+
+.btn
+  background-color $color-04
+  text-transform uppercase
+  text-decoration none
+  &:hover
+    background-color $color-08
+  &:active
+    background-color $color-21
+
+.page-header
+  background-color $color-03
+
+.top-row
+  background-color $color-02
+  font-size 17px
+  text-transform capitalize
+
+.logo-top
+  box-shadow inset 0 -5px 0 $color-05
+  background-color $color-04
+  &:hover
+    background-color $color-08
+  &:active
+    background-color $color-21
+
+a
+  color $color-01
+  text-decoration none
+
+.search
+  &:hover
+    background-color $color-20
+
+.bookmarks, .cart
+  &:hover
+    background-color $color-20
+  &:active
+    background-color $color-22
+
+.order
+  background-color $color-25
+  &:hover
+    background-color $color-23
+  &:active
+    background-color $color-24
+
+.slogan
+  color $color-04
+  font 25px "Cuprum-Italic"
+  line-height 23px
+
+.phone-number
+  border 3px solid $color-01
+
+.phone
+  background-image url('../img/icon-phone.svg')
+
+.number
+  color $color-04
+  line-height 21px
+  font-size 21px
+
+.address
+  p
+    color $color-06
+    line-height 24px
+
+.authorization
+  font 21px "Cuprum"
+  line-height 21px
+  a
+    color $color-07
+
+.registration
+  background-color $color-01
+  color $color-07
+
+.navigation
+  box-shadow inset 0 -5px 0 $color-02
+  background-color $color-06
+  font-size 17px
+  line-height 17px
+
+.navigation
+  a
+    color $color-01
+    text-decoration none
+
+.navigation-item
+  list-style none
+  &:hover
+    background-color $color-02
+  &:active
+    background-color $color-26
+
+.categories-item
+  h3
+    color $color-01
+    font 24px "Cuprum-Bold"
+    line-height 30px
+    text-transform capitalize
+
+.material
+  background-color $color-10
+
+.click
+  background-color $color-07
+  opacity 0.1
+  text-align center
+  text-transform uppercase
+  text-decoration none
+  &:hover
+    opacity 0.2
+  &:active
+    opacity 0.3
+
+.item-icon-material
+  background-image url('../img/icon-1.svg')
+  width 44px
+  height 65px
+
+.tool
+  background-color $color-11
+
+.item-icon-tool
+  background-image url('../img/icon-2.svg')
+  width 75px
+  height 61px
+
+.slider-item
+  h3
+    color $color-01
+    font 36px "Cuprum-Bold"
+    line-height 36px
+    text-transform uppercase
+  p
+    font-size 18px
+    line-height 24px
+    color $color-01
+
+.perf
+  background-image url('../img/perf.jpg')
+
+.drill
+  background-image url('../img/drill.jpg')
+
+.prev
+  background-image url('../img/icon-left.svg')
+  width 22px
+  height 40px
+
+.next
+  background-image url('../img/icon-right.svg')
+  width 22px
+  height 40px
+
+.technic
+  background-color $color-12
+
+.item-icon-technic
+  background-image url('../img/icon-3.svg')
+  width 78px
+  height 62px
+
+.sale
+  background-color $color-13
+
+.item-icon-sale
+  background-image url('../img/icon-4.svg')
+  width 59px
+  height 72px
+
+.delivery
+  background-color $color-14
+
+.item-icon-delivery
+  background-image url('../img/icon-5.svg')
+  width 78px
+  height 63px
+
+.popular-header
+  background-color $color-15
+
+  h3
+    color $color-06
+    font-size 30px
+    line-height 30px
+    text-transform uppercase
+
+.goods-item
+  font 17px "pt-sans-bold"
+  line-height 18px
+  &:hover
+    box-shadow 0 10px 25px $color-27
+
+  .visually-hidden
+    a
+      box-shadow inset 0 -3px 0 $color-28
+      background-color $color-25
+      &:hover
+        background-color $color-23
+      &:active
+        background-color $color-24
+
+  .title
+    color $color-07
+    font-size 18px
+    line-height 20px
+
+  .old-price
+    color $color-16
+    text-transform uppercase
+
+  .price
+    color $color-01
+    text-transform uppercase
+    background-image url('../img/btn_copy_14.svg')
+    width 141px
+    height 38px
+
+.manufacturers-item
+  list-style none
+  &:hover
+    box-shadow 0 10px 25px $color-27
+  &:active
+    box-shadow 0 4px 10px $color-27
+  a
+    &:active
+      opacity 0.3
+
+.service
+  background-color $color-17
+  font-family "pt-sans"
+  line-height 24px
+
+.service
+  h3
+    text-transform uppercase
+
+.service-tab-nav
+  list-style none
+
+  li
+    box-shadow 0 1px 0 $color-02, inset 0 1px 0 $color-09
+    background-color $color-06
+    &:hover
+      box-shadow 0 1px 0 $color-02, inset 0 1px 0 $color-09
+      background-color $color-02
+    &:active
+      box-shadow 0 1px 0 $color-01, inset 0 1px 0 $color-01
+      background-color $color-01
+
+  a
+    &:active
+      color $color-06
+
+.deliverity
+  background-image url('../img/Layer_131.png')
+
+.guarantee
+  background-image url('../img/Layer_130.png')
+
+.credit
+  background-image url('../img/Layer_119.png')
+
+.about
+  h2
+    font-size 30px
+    line-height 30px
+    text-transform uppercase
+
+.about
+  p
+    font 13px "pt-sans"
+    line-height 24px
+
+.partners
+  list-style none
+  font-size 18px
+  line-height 20px
+
+.page-footer
+  background-color $color-06
+  font-size 18px
+  line-height 24px
+
+.logo-bottom
+  box-shadow inset 0 -5px 0 $color-05
+  background-color $color-04
+
+.footer-nav
+  list-style none
+  a
+    color $color-18
+    &:hover
+      text-decoration underline
+    &:active
+      opacity 0.5
+
+.footer-middle-row
+  color $color-03
+
+.footer-category
+  list-style none
+  a
+    color $color-19
+    &:hover
+      text-decoration underline
+    &:active
+      opacity 0.5
+
+.footer-bottom-row
+  background-color $color-02
+  font-size 16px
+
+.footer-bottom-row
+  p
+    color $color-01
+  a
+    color $color-19
+    &:hover
+      text-decoration underline
+    &:active
+      color $color-04
+
+.social-item
+  background-color $color-20
+  &:hover, &:active
+    background-color $color-04
+
+.vk
+  background-image url('../img/icon-vk.svg')
+  width 26px
+  height 15px
+
+.facebook
+  background-image url('../img/icon-fb.svg')
+  width 12px
+  height 22px
+
+.instagram
+  background-image url('../img/icon-insta.svg')
+  width 21px
+  height 21px
