--- a/catalog.pug
+++ b/catalog.pug
@@ -14,20 +14,16 @@ html(lang="ru")
               img(src="img/logo-technomart.svg", alt="logo")
           .search
             form(action="search.html" method="get")
+              input(type="text" id="search" placeholder="Поиск:")
               label(for="search")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                   path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
-              input(type="text" id="search" placeholder="Поиск:")
           .bookmarks
-            svg(xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16")
-              path(fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z")
+            .bookmark-icon
             a(href="") Закладки:
             span 0
           .cart
-            svg(xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15")
-              circle(fill="#ffffff" cx="4.5" cy="13.5" r="1.5")
-              circle(fill="#ffffff" cx="12.5" cy="13.5" r="1.5")
-              path(fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z")
+            .cart-icon
             a(href="") Корзина:
             span 10
           a.order(href="") Оформить заказ
@@ -36,20 +32,23 @@ html(lang="ru")
             h2.visually-hidden главные данные
             p Интернет-магазин строительных материалов и инструментов для ремонта
           .address
-            a(href="tel:+78125550555") +7 (812) 555-05-55
+            .phone-number
+              .phone
+              a.number(href="tel:+78125550555") +7 (812) 555-05-55
             p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
           .authorization
-            p.customer Равшан Джамшутович
+            a.customer
               svg(xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18")
                 path(fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z")
-            a.visually-hidden(href="") logout
+            p Равшан Джамшутович
+            a.logout(href="")
               svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
                 path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
                 path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
-            ul
-              li
+            ul.personal
+              li.personal-item
                 a(href="") Мои Заказы
-              li
+              li.personal-item
                 a(href="") Личный кабинет
         nav.navigation
           ul.navigation-list
@@ -72,14 +71,13 @@ html(lang="ru")
         ul.breadcrumbs
           li.breadcrumbs-item.home
             a(href="index.html")
-              img(src="img/icon-home.svg", alt="home")
           li.breadcrumbs-item
             a(href="") Каталог
           li.breadcrumbs-item
             a(href="") Инструмент
           li.breadcrumbs-item
             a.current Перфораторы
-        h1 Перфораторы
+        h1.content-title Перфораторы
         aside.aside
           p.filter фильтр:
           form(action="https://echo.htmlacademy.ru/courses" method="get")
@@ -87,10 +85,8 @@ html(lang="ru")
               legend цена:
               .choose-price
                 label(for="rating")
+                input(id="rate" name="rate" min="0" max="30000" step="500" value="0")
                 input(id="rate" name="rate" min="0" max="30000" step="500" value="30000")
-              .price-number
-              .line
-              .price-number
             fieldset.choose-filter
               legend Производители:
               p
@@ -120,7 +116,7 @@ html(lang="ru")
         section.goods.catalog
           .sort
             p.sort-to сортировка:
-            ul
+            ul.sort-list
               li.sort-to-price
                 a(href="") по цене
               li.sort-to-type
@@ -128,14 +124,18 @@ html(lang="ru")
               li.sort-to-functional
                 a(href="") по функионалу
             ul.arrows
-              li.arrow-item-up
-                a(href="") up
-              li.arrow-item-down
-                a(href="") down
+              li.arrow-item
+                a.arrow(href="" aria-label="up")
+                  svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
+                    path(fill="#231F20" d="M5.5 0L0 10h11z")
+              li.arrow-item
+                a.arrow(href="" aria-label="down")
+                  svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
+                    path(fill="#231F20" d="M5.5 10L0 0h11")
           .goods-item
             a(href="")
               img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 3000
@@ -144,7 +144,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 6000
@@ -153,7 +153,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 2000
@@ -161,7 +161,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 3000
@@ -170,7 +170,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 6000
@@ -179,7 +179,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 2000
@@ -187,7 +187,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 3000
@@ -196,7 +196,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 6000
@@ -205,16 +205,18 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
           .good-in-cart.visually-hidden
             .icon-mark
-            p товар добавлен в корзину!
-            a.btn(href="") оформить заказ
-            button(type="submit") продолжить покупки
+            p Товар добавлен в корзину!
+            .close
+            .order-buy
+              a.btn(href="") оформить заказ
+              button(type="submit") продолжить покупки
           .pager
             ul.pager-list
               li.pager-item
@@ -232,7 +234,8 @@ html(lang="ru")
       .container
         .footer-top-row
           .logo-bottom
-            img(src="img/logo-technomart.svg", alt="logo")
+            a(href="index.html" alt="logo" aria-label="main-page")
+              img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li
               a(href="") Компания
