--- a/index.pug
+++ b/index.pug
@@ -14,20 +14,16 @@ html(lang="ru")
               img(src="img/logo-technomart.svg", alt="logo")
           .search
             form(action="search.html" method="get")
+              input(type="text" id="search" placeholder="Поиск:")
               label(for="search")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                   path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
-              input(type="text" id="search" placeholder="Поиск:")
           .bookmarks
-            svg(xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16")
-              path(fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z")
+            .bookmarks-icon
             a(href="") Закладки:
             span 0
           .cart
-            svg(xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15")
-              circle(fill="#ffffff" cx="4.5" cy="13.5" r="1.5")
-              circle(fill="#ffffff" cx="12.5" cy="13.5" r="1.5")
-              path(fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z")
+            .cart-icon
             a(href="") Корзина:
             span 0
           a.order(href="") Оформить заказ
@@ -45,7 +41,7 @@ html(lang="ru")
               svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
                 path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
                 path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
-              p.customer Войти
+              a.customer(href="login.html") Войти
             a.registration(href="registration.html") Регистриция
         nav.navigation
           ul.navigation-list
@@ -109,7 +105,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_9000.jpg", alt="Perforator_9000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 9000
@@ -118,7 +114,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 3000
@@ -127,7 +123,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 6000
@@ -136,7 +132,7 @@ html(lang="ru")
           .goods-item
             a(href="")
               img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .visually-hidden
+            .hidden
               a(href="") купить
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 2000
@@ -209,8 +205,9 @@ html(lang="ru")
             iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
             a.btn(href="") Заблудились? Напишите нам!
           .send-form.visually-hidden
+            .close
             form(action="https://echo.htmlacademy.ru/courses" method="post")
-              p.name-half-width
+              p.name.half-width
                 label(for="introduce") Ваше имя:
                 input(type="text" name="introduce" placeholder="Имя Фамилия")
               p.e-mail.half-width
@@ -219,13 +216,14 @@ html(lang="ru")
               p.text.full-width
                 label(for="text") Текст письма:
                 textarea(name="text" placeholder="В свободной форме" rows="6")
-              .button
+              .form-button
                 button.btn(type="submit") отправить
     footer.page-footer
       .footer-container
         .footer-top-row
           .logo-bottom
-            img(src="img/logo-technomart.svg", alt="logo")
+            a(href="index.html" alt="logo" aria-label="main-page")
+              img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li
               a(href="") Компания
@@ -252,8 +250,8 @@ html(lang="ru")
         .footer-bottom-row
           p © 2010-2017 Компания "Техномарт" Все права защищены
           section.socials
-            .social-item
-              a.vk(href="vk.com" target="_blank" aria-label="vk")
+            .social-item.vk
+              a(href="vk.com" target="_blank" aria-label="vk")
             .social-item.facebook
               a(href="facebook.com" target="_blank" aria-label="facebook")
             .social-item.instagram
