--- a/css/style.styl
+++ b/css/style.styl
@@ -240,7 +240,7 @@ a
     text-transform capitalize
 
 .material
-  background-color $color-10
+  background url('../img/icon-1.svg') no-repeat $color-10
 
 .click
   background-color $color-07
@@ -253,18 +253,8 @@ a
   &:active
     opacity 0.3
 
-.item-icon-material
-  background-image url('../img/icon-1.svg')
-  width 44px
-  height 65px
-
 .tool
-  background-color $color-11
-
-.item-icon-tool
-  background-image url('../img/icon-2.svg')
-  width 75px
-  height 61px
+  background url('../img/icon-2.svg') no-repeat $color-11
 
 .slider-item
   h3
@@ -278,10 +268,10 @@ a
     color $color-01
 
 .perf
-  background-image url('../img/perf.jpg')
+  background url('../img/perf.jpg') no-repeat
 
 .drill
-  background-image url('../img/drill.jpg')
+  background url('../img/drill.jpg') no-repeat
 
 .prev
   background-image url('../img/icon-left.svg')
@@ -294,28 +284,13 @@ a
   height 40px
 
 .technic
-  background-color $color-12
-
-.item-icon-technic
-  background-image url('../img/icon-3.svg')
-  width 78px
-  height 62px
+  background url('../img/icon-3.svg') no-repeat $color-12
 
 .sale
-  background-color $color-13
-
-.item-icon-sale
-  background-image url('../img/icon-4.svg')
-  width 59px
-  height 72px
+  background url('../img/icon-4.svg') no-repeat $color-13
 
 .delivery
-  background-color $color-14
-
-.item-icon-delivery
-  background-image url('../img/icon-5.svg')
-  width 78px
-  height 63px
+  background url('../img/icon-5.svg') no-repeat $color-14
 
 /* catalog styles start */
 
@@ -495,7 +470,7 @@ a
     &:active
       color $color-06
 
-.deliverity
+.delive
   background url('../img/Layer_131.png') no-repeat
 
 .guarantee
