--- a/index.pug
+++ b/index.pug
@@ -65,11 +65,9 @@ html(lang="ru")
           .categories-item.material
             h3 материалы
             a.click(href="") на любой вкус
-            .item-icon-material
           .categories-item.tool
             h3 инструмент
             a.click(href="") на все случаи
-            .item-icon-tool
           .categories-item.slider
             .slider-item.perf
               h3 Перфораторы
@@ -88,15 +86,12 @@ html(lang="ru")
           .categories-item.technic
             h3 техника
             a.click(href="") для стройки
-            .item-icon-technic
           .categories-item.sale
             h3 скидка 50%
             a.click(href="") на 350 товаров
-            .item-icon-sale
           .categories-item.delivery
             h3 доставка
             a.click(href="") бесплатно
-            .item-icon-delivery
       section.popular.products
         header.popular-header
           h3 Популярные товары:
@@ -179,7 +174,7 @@ html(lang="ru")
               li.service-tab-item(data-name="3")
                 a(href="") Кредит
             .service-tab-content
-              .service-tab-item.deliverity
+              .service-tab-item.delive
                 h3 Доставка
                 p Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
               .service-tab-item.guarantee
